--- a/style.css
+++ b/style.css
@@ -302,7 +302,47 @@ h3 {
 .achievement p {
     font-size: 1.5rem;
 }
-
+/* 代表挨拶 */
+div.greeting {
+    display: flex;
+    width: 1325px;
+    background-color: pink;
+    height: 555px;
+}
+.greeting img {
+    margin-top: 10px;
+    width: 43%;
+    border-radius: 50%;
+}
+.greeting div:nth-of-type(1){
+    width: 30%;
+    height: 100%;
+    margin: 0 5%;
+}
+.greeting div:nth-of-type(1) p:nth-of-type(4){
+    text-align: left;
+}
+.greeting div:nth-of-type(2) p{
+    text-align: left;
+}
+.greeting div:nth-of-type(1) p:nth-of-type(4){
+    text-align: left;
+}
+.greeting div:nth-of-type(2){
+    padding: 0 5%;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    border-left: solid;
+}
+h4 {
+    font-size: 2rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.greeting p {
+    margin-bottom: 20px;
+}
 /* お問合せ */
 .inline {
     display: inline-block;
@@ -501,6 +541,38 @@ footer small {
     .achievement p {
         font-size: 1.2rem;
     }
+    /* 代表挨拶 */
+    div.greeting {
+        display: block;
+        text-align: center;
+        width: auto;
+        height: auto;
+    }
+    #greeting {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #greeting h2 {
+        width: 100%;
+    }
+    .greeting div:nth-of-type(1) {
+        align-items: center;
+        width: 90%;
+        font-size: 1rem;
+    }
+    .greeting div:nth-of-type(2) {
+        font-size: 1rem;
+        border-left: none;
+        border-top: solid;
+        width: 90%;
+    }
+    .greeting img {
+        width: 30%;
+    }
+    h4 {
+        font-size: 1.7rem;
+    }
     /* お問合せ */
     .tap {
         display: block;
@@ -571,6 +643,19 @@ footer small {
         width: 260px;
         height: 230px;
     }
+    /* 代表挨拶 */
+    .greeting div:nth-of-type(1) {
+        font-size: 0.9rem;
+    }
+    .greeting div:nth-of-type(2) {
+        font-size: 0.9rem;
+    }
+    .greeting img {
+        width: 40%;
+    }
+    h4 {
+        font-size: 1.7rem;
+    }
     /* お問合せ */
     .LINE {
         font-size: 1rem;
@@ -611,6 +696,7 @@ footer small {
     .slogandiv span {
         font-size: 2rem;
     }
+    /* 内容 */
     /* クラス紹介 */
     .classdiv {
         width: 16rem;
@@ -621,7 +707,12 @@ footer small {
         width: 16rem;
         height: 14rem;
     }
-    /* 内容 */
+    /* 代表挨拶 */
+    div.greeting {
+        display: block;
+        text-align: center;
+    }
+    /* お問合せ */
     .adress {
         font-size: 0.9rem;
     }
