ファイル階層修正

--- a/chugaku/chugaku.css
+++ b/chugaku/chugaku.css
@@ -311,7 +311,7 @@ footer small {
         display: block;
         width: 40px;
         height: 40px;
-        background-image: url(photo/menu.svg);
+        background-image: url(/photo/menu.svg);
         background-size: 40px;
         background-position: center;
         background-repeat: no-repeat;
@@ -319,7 +319,7 @@ footer small {
         z-index: 2;
     }
     .burgermenu.is-active {
-        background-image: url(photo/close.svg);
+        background-image: url(/photo/close.svg);
     }
     .menu {
         width: 100vw;
