--- a/chugaku/chugaku.css
+++ b/chugaku/chugaku.css
@@ -155,11 +155,36 @@ section {
     margin: 30px 4%;
 }
 section h2 {
+    width: 100%;
     font-size: 3rem;
     margin-top: 30px;
     margin-bottom: 20px;
     border-bottom: solid;
 }
+/* レッスン内容 */
+.lesson {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
+}
+.lesson div {
+    margin-bottom: 20px;
+    width: 70%;
+}
+.lesson div p {
+    text-align: left;
+}
+.lesson div:nth-of-type(1) {
+    background-color: rgb(255 200 255);
+}
+.lesson div:nth-of-type(2) {
+    background-color: rgb(171 224 255);
+}
+.lesson div:nth-of-type(3) {
+    background-color: rgb(255 216 158);
+}
+/* 資格 */
 .achievement h3 {
     font-size: 1.8rem;
 }
