--- a/shodo/shodo.css
+++ b/shodo/shodo.css
@@ -164,10 +164,33 @@ section {
     margin: 30px 4%;
 }
 section h2 {
+    width: 100%;
     font-size: 3rem;
     margin-top: 30px;
     margin-bottom: 20px;
     border-bottom: solid;
+}
+/* レッスン内容 */
+.lesson {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
+}
+.lesson div {
+    padding-top: 10px;
+    margin-bottom: 20px;
+    width: 70%;
+}
+.lesson div p {
+    text-align: left;
+    margin: 2% 5%;
+}
+.lesson div:nth-of-type(1) {
+    background-color: rgb(125, 246, 255);
+}
+.lesson div:nth-of-type(2) {
+    background-color: rgb(206, 168, 255);
 }
 /* 資格 */
 .achievement h3 {
