申し込みフォーム追加

--- a/chugaku/chugaku.css
+++ b/chugaku/chugaku.css
@@ -36,8 +36,8 @@ li a {
     font-size: 1.2rem;
 }
 h1 img {
-    width: 9rem;
-    height: 8rem;
+    width: 8rem;
+    height: 7rem;
     object-fit: cover;
 }
 
@@ -96,7 +96,24 @@ h1 img {
     background-color: rgb(255, 149, 0);
     color: white;
 }
-
+.form_main {
+    background-color: rgb(255, 149, 0);
+    color: white;
+    border-radius: 20px;
+    padding: 30px;
+    font-weight: bold;
+    list-style: none;
+    font-size: 3rem;
+}
+.form_main:hover {
+    background-color: white;
+    color: rgb(255, 149, 0);
+    border: solid rgb(255, 149, 0);
+    border-width: 5px;
+}
+.formdiv {
+    margin: 50px 0;
+}
 /* バーガーメニュー */
 .burgermenu {
     display: none;
@@ -373,6 +390,10 @@ footer small {
     br {
         display: block;
     }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 2rem;
+    }
     /* 内容 */
     section h2 {
         font-size: 1.8rem;
@@ -440,6 +461,10 @@ footer small {
     }
     .slogandiv {
         height: 396px;
+    }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 1.5rem;
     }
     /* 内容 */
     section h2 {
