--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ header {
     padding: 0 4%;
     margin: 0 auto ;
     background-color: #F6D6AC;
-    height: 140px;
 }
 li a {
     color: black;
@@ -38,7 +37,7 @@ li a {
     font-size: 1.2rem;
 }
 h1 img {
-    width: 10rem;
+    width: 8rem;
     height: 7rem;
     object-fit: cover;
 }
@@ -66,8 +65,8 @@ li.headmenu ul.can {
 	left:0;
 	list-style-type:none;
     background-color: #F6D6AC;
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease;
+    -webkit-transition: all 0s ease;
+    transition: all 0s ease;
 }
 li.headmenu:hover ul.can {
     top: -30px;
@@ -112,7 +111,24 @@ li.headmenu:hover ul.can {
     background-color: rgb(255, 149, 0);
     color: white;
 }
-
+.form_main {
+    background-color: rgb(255, 149, 0);
+    color: white;
+    border-radius: 20px;
+    padding: 30px;
+    font-weight: bold;
+    list-style: none;
+    font-size: 3rem;
+}
+.form_main:hover {
+    background-color: white;
+    color: rgb(255, 149, 0);
+    border: solid rgb(255, 149, 0);
+    border-width: 5px;
+}
+.formdiv {
+    margin: 50px 0;
+}
 /* バーガーメニュー */
 .burgermenu {
     display: none;
@@ -152,24 +168,24 @@ br {
   animation :slideshow 24s linear infinite;
 }
 .slide {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 .slide > img {
     object-fit: cover;
     z-index: -1;
 }
 .slogandiv,.slide {
-   height: 660px;
+    height: 660px;
 }
 .slide img:nth-child(2){
     animation-delay: 8s;
-  }
-   
+}
+
 .slide img:last-child{
     animation-delay: 16s;
-  }
+}
 /* アニメーション設定 */
 @keyframes fadeUpAnime{
     from {
@@ -184,21 +200,21 @@ br {
 /* 背景アニメーション */
 @keyframes slideshow {
     0%{
-      opacity: 0;
+        opacity: 0;
     }
     10%{
-      opacity: 1;
+        opacity: 1;
     }
     28%{
-      opacity: 1
+        opacity: 1
     }
     38%{
-      opacity: 0;
+        opacity: 0;
     }
     100%{
-      opacity: 0;
+        opacity: 0;
     }
-  }
+}
 /* 文字強調 */
 span {
     color: red;
@@ -450,10 +466,10 @@ footer small {
     from {
         opacity: 0;
         transform: translateY(100px);
-  }
-  to {
-      opacity: 1;
-      transform: translateY(0);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
@@ -522,13 +538,17 @@ footer small {
     .menu.is-active {
         display: block;
     }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 2rem;
+    }
     /* キャッチコピー */
     br {
         display: block;
     }
     /* 内容 */
     section h2 {
-        font-size: 1.8rem;
+        font-size: 2rem;
     }
     .class {
         flex-flow: column;
@@ -620,6 +640,10 @@ footer small {
     }
     .slogandiv,.slide {
         height: 396px;
+    }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 1.5rem;
     }
     /* 内容 */
     section h2 {
