--- a/shogaku/shogaku.css
+++ b/shogaku/shogaku.css
@@ -203,6 +203,13 @@ section h2 {
     text-align: left;
     margin: 2% 5%;
 }
+/* 授業風景 */
+.scenery img {
+    object-fit: cover;
+    width: 500px;
+    height: 300px;
+    margin: 10px;
+}
 /* 資格 */
 .achievement h3 {
     font-size: 1.8rem;
@@ -480,6 +487,11 @@ footer small {
     }
     .lesson div {
         width: auto;
+    }
+    /* レッスン風景 */
+    .scenery img {
+        width: 260px;
+        height: 230px;
     }
     /* お問合せ */
     .LINE {
