--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ li a {
     color: black;
     text-decoration: none;
     text-align: center;
-    padding-bottom: 9.5px;
+    padding-bottom: 2.5px;
 }
 .dropdown{
     display: flex;
-    gap: 30px;
+    gap: 50px;
     list-style-type:none;
     align-items: center;
 }
@@ -47,37 +47,11 @@ h1 img {
 	position:relative;
 }
 
-ul.can {
-    visibility: hidden;
-    opacity: 0;
-    z-index: 1;
+.dropdown > li.headmenu:hover > a {
+    color: #fff;
 }
-.dropdown > li:hover {
-    -webkit-transition: all .5s;
-    transition: all .5s;
-}
-li.headmenu ul.can {
-	display:block;
-	position:absolute;
-    width: 100%;
-	padding:0;
-	margin:0;
-	left:0;
-	list-style-type:none;
-    background-color: #F6D6AC;
-    -webkit-transition: all 0s ease;
-    transition: all 0s ease;
-}
-li.headmenu:hover ul.can {
-    top: -30px;
-    visibility: visible;
-    opacity: 1;
-}
-.dropdown > li.headmenu:hover {
-    transform: translateY(-3px);
-}
-.can > li:hover {
-    transform: translateY(-3px);
+.can > li:hover > a {
+    color: #fff;
 }
 
 .can > li {
@@ -95,6 +69,33 @@ li.headmenu:hover ul.can {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+nav ul li a{
+	display: block;
+	text-decoration: none;
+	transition:all .3s;
+}
+nav li.headmenu ul{
+    /*絶対配置で位置を指定*/
+	position: absolute;
+	left:0;
+	top:40px;
+	z-index: 4;
+    /*形状を指定*/
+	background:#F6D6AC;
+	width:180px;
+    /*はじめは非表示*/
+	visibility: hidden;
+	opacity: 0;
+    /*アニメーション設定*/
+	transition: all .3s;
+}
+nav li.headmenu:hover > ul,
+nav li.headmenu ul li:hover > ul,
+nav li.headmenu:active > ul,
+nav li.headmenu ul li:active > ul{
+  visibility: visible;
+  opacity: 1;
 }
 
 /* 入塾申し込みボタン */
