--- a/shodo/shodo.css
+++ b/shodo/shodo.css
@@ -27,7 +27,7 @@ header {
 li a {
     text-decoration: none;
     text-align: center;
-    padding-bottom: 9.5px;
+    padding-bottom: 2.5px;
 }
 
 .dropdown{
@@ -44,48 +44,67 @@ h1 img {
 }
 .dropdown{
     display: flex;
-    gap: 30px;
+    gap: 50px;
     list-style-type:none;
+    align-items: center;
 }
 
 /* ドロップダウン */
 .dropdown > li {
 	position:relative;
 }
-.dropdown > li > ul {
-	display:none;
+
+.dropdown > li.headmenu:hover > a {
+    background-color: #fff;
+    color: #000;
 }
-.dropdown > li:hover ul {
-	display:block;
-	position:absolute;
-    width: 7.5rem;
-	padding:0;
-	margin:0;
-	top:1.5em;
-	left:0;
-	list-style-type:none;
-}
-.dropdown > li.headmenu:hover {
-    transform: translateY(-5px);
-}
-.can > li:hover {
-    transform: translateY(-5px);
+.can > li:hover > a {
+    background-color: #fff;
+    color: #000;
 }
 
 .can > li {
     border-bottom: 1px solid white;
 }
+
 .cantitle:after {
     content: '';
     display: inline-block;
     width: 6px;
     height: 6px;
     margin: 0 0 0 15px;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    border-right: 1px solid rgb(255,255, 255);
+    border-bottom: 1px solid rgb(255, 255, 255);
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+nav ul li a{
+	display: block;
+	text-decoration: none;
+	transition:all .3s;
+}
+nav li.headmenu ul{
+    /*絶対配置で位置を指定*/
+	position: absolute;
+	left:0;
+	top:40px;
+	z-index: 4;
+    /*形状を指定*/
+	background:black;
+	width:180px;
+    /*はじめは非表示*/
+	visibility: hidden;
+	opacity: 0;
+    /*アニメーション設定*/
+	transition: all .3s;
+}
+nav li.headmenu:hover > ul,
+nav li.headmenu ul li:hover > ul,
+nav li.headmenu:active > ul,
+nav li.headmenu ul li:active > ul{
+  visibility: visible;
+  opacity: 1;
 }
 
 /* 入塾申し込みボタン */
