--- a/chugaku/chugaku.css
+++ b/chugaku/chugaku.css
@@ -78,12 +78,11 @@ nav ul li a{
 nav li.headmenu ul{
     /*絶対配置で位置を指定*/
 	position: absolute;
-	left:0;
 	top:40px;
 	z-index: 4;
     /*形状を指定*/
 	background:#F6D6AC;
-	width:140px;
+	width:110%;
     /*はじめは非表示*/
 	visibility: hidden;
 	opacity: 0;
@@ -367,7 +366,6 @@ footer small {
     .form {
         position: relative;
         right: 50px;
-        top: 8px;
     }
     /* バーガーメニュー */
     .burger {
