--- a/shodo/shodo.css
+++ b/shodo/shodo.css
@@ -87,12 +87,11 @@ nav ul li a{
 nav li.headmenu ul{
     /*絶対配置で位置を指定*/
 	position: absolute;
-	left:0;
 	top:40px;
 	z-index: 4;
     /*形状を指定*/
 	background:black;
-	width:180px;
+	width:110%;
     /*はじめは非表示*/
 	visibility: hidden;
 	opacity: 0;
@@ -382,7 +381,6 @@ footer small {
     .form {
         position: relative;
         right: 50px;
-        top: 8px;
     }
     /* バーガーメニュー */
     .burger {
