--- a/shogaku/shogaku.css
+++ b/shogaku/shogaku.css
@@ -78,12 +78,11 @@ nav ul li a{
 nav li.headmenu ul{
     /*絶対配置で位置を指定*/
 	position: absolute;
-	left:0;
-	top:40px;
+	top:30px;
 	z-index: 4;
     /*形状を指定*/
 	background:#F6D6AC;
-	width:180px;
+	width:110%;
     /*はじめは非表示*/
 	visibility: hidden;
 	opacity: 0;
@@ -369,7 +368,6 @@ footer small {
     .form {
         position: relative;
         right: 50px;
-        top: 8px;
     }
     /* バーガーメニュー */
     .burger {
