--- a/style.css
+++ b/style.css
@@ -78,12 +78,11 @@ nav ul li a{
 nav li.headmenu ul{
     /*絶対配置で位置を指定*/
 	position: absolute;
-	left:0;
-	top:40px;
+	top:30px;
 	z-index: 4;
     /*形状を指定*/
 	background:#F6D6AC;
-	width:180px;
+	width:110%;
     /*はじめは非表示*/
 	visibility: hidden;
 	opacity: 0;
@@ -312,6 +311,27 @@ h3 {
 }
 .achievement p {
     font-size: 1.5rem;
+}
+/* 留学 */
+.abroad p {
+    font-size: 1.5rem;
+}
+.abroad span {
+    padding: 10px;
+}
+.abroad div {
+    text-align: left;
+}
+.abroad > div {
+    display: flex;
+}
+.abroad > div > div:nth-of-type(2) {
+    margin-left: 20px;
+}
+.abroad {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 /* 代表挨拶 */
 div.greeting {
@@ -654,6 +674,10 @@ footer small {
     .introduction p {
         font-size: 1.3rem;
     }
+    /* 留学 */
+    .abroad p {
+        font-size: 0.8rem;
+    }
     /* 代表挨拶 */
     .greeting div:nth-of-type(1) {
         font-size: 0.9rem;
@@ -717,6 +741,10 @@ footer small {
         font-size: 1.1rem;
         width: 16rem;
         height: 14rem;
+    }
+    /* 留学 */
+    .abroad p {
+        font-size: 0.7rem;
     }
     /* 代表挨拶 */
     div.greeting {
