--- a/chugaku/chugaku.css
+++ b/chugaku/chugaku.css
@@ -219,10 +219,10 @@ section h2 {
     background-color: rgb(255 216 158);
 }
 /* 授業風景 */
-.scenery img {
+section.scenery > img {
     object-fit: cover;
-    width: 500px;
-    height: 300px;
+    width: 300px;
+    height: 180px;
     margin: 10px;
 }
 /* 資格 */
