--- a/shodo/shodo.css
+++ b/shodo/shodo.css
@@ -201,7 +201,6 @@ section {
 section h2 {
     width: 100%;
     font-size: 3rem;
-    margin-top: 30px;
     margin-bottom: 20px;
     border-bottom: solid;
 }
@@ -227,6 +226,9 @@ section h2 {
 .lesson div:nth-of-type(2) {
     background-color: rgb(206, 168, 255);
 }
+.lesson br {
+    display: block;
+}
 /* 授業風景 */
 .scenery img {
     object-fit: cover;
@@ -239,7 +241,21 @@ section h2 {
     font-size: 1.8rem;
 }
 .achievement p {
+    text-align: left;
     font-size: 1.5rem;
+}
+section.achievement {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.achievement div {
+    width: 70%;
+    padding: 30px;
+    border-radius: 40px;
+}
+.achievement div {
+    background-color: #ffb6b6;
 }
 /* お問合せ */
 .inline {
@@ -499,7 +515,7 @@ footer small {
     .slogandiv {
         height: 396px;
      }
-     /* 入塾申し込みフォーム */
+    /* 入塾申し込みフォーム */
     .form_main {
         font-size: 1.5rem;
     }
@@ -517,10 +533,11 @@ footer small {
     .lesson div {
         width: auto;
     }
-    /* 授業風景 */
+    /* 授業風景*/
     .scenery img {
-        width: 260px;
-        height: 230px;
+        width: 160px;
+        height: 96px;
+        margin: 3px;
     }
     /* お問合せ */
     .LINE {
@@ -557,6 +574,16 @@ footer small {
         font-size: 2rem;
     }
     /* 内容 */
+    /* 授業風景*/
+    .scenery img {
+        width: 130px;
+        height: 78px;
+        margin: 1px;
+    }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 1.2rem;
+    }
     .adress {
         font-size: 0.9rem;
     }
