--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@ section {
 section h2 {
     width: 100%;
     font-size: 3rem;
-    margin-top: 30px;
     margin-bottom: 20px;
     border-bottom: solid;
 }
@@ -754,6 +753,12 @@ footer small {
     .abroad p {
         font-size: 0.8rem;
     }
+    /* 授業風景*/
+    .scenery img {
+        width: 160px;
+        height: 96px;
+        margin: 3px;
+    }
     /* 代表挨拶 */
     .greeting div:nth-of-type(1) {
         font-size: 0.9rem;
@@ -836,6 +841,16 @@ footer small {
     div.greeting {
         display: block;
         text-align: center;
+    }
+    /* 授業風景*/
+    .scenery img {
+        width: 130px;
+        height: 78px;
+        margin: 1px;
+    }
+    /* 入塾申し込みフォーム */
+    .form_main {
+        font-size: 1.2rem;
     }
     /* お問合せ */
     .adress {
