--- a/style.css
+++ b/style.css
@@ -360,6 +360,9 @@ section.achievement {
 .abroad p {
     font-size: 1.5rem;
 }
+.abroad-iphone p {
+    font-size: 1.5rem;
+}
 .abroad div {
     text-align: left;
 }
@@ -380,6 +383,9 @@ section.abroad {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.abroad-iphone {
+    display: none;
 }
 /* 代表挨拶 */
 div.greeting {
@@ -750,8 +756,17 @@ footer small {
         height: 14rem;
     }
     /* 留学 */
-    .abroad p {
-        font-size: 0.8rem;
+    .abroad-iphone {
+        display: block;
+    }
+    div.abroad {
+        display: none;
+    }
+    .abroad p{
+        font-size: 1.2rem;
+    }
+    .abroad-iphone p{
+        font-size: 0.9rem;
     }
     /* 授業風景*/
     .scenery img {
