--- a/style.css
+++ b/style.css
@@ -359,6 +359,7 @@ section.achievement {
 }
 .abroad p {
     font-size: 1.5rem;
+    margin-top: 15px;
 }
 .abroad-iphone p {
     font-size: 1.5rem;
@@ -372,13 +373,12 @@ section.abroad > div {
     padding: 50px;
     background-color: #ffb6b6;
     border-radius: 40px;
+    text-align: center;
 }
-div.abroad {
-    display: flex;
+div.abroad > div {
+    text-align: center;
 }
-div.abroad > div:nth-of-type(2) {
-    margin-left: 20px;
-}
+
 section.abroad {
     display: flex;
     flex-direction: column;
